--- a/index.html
+++ b/index.html
@@ -3,13 +3,62 @@
 <meta charset="utf-8">
 <head>
   <title></title>
-  <script type="text/javascript" src="https://lamcdn.net/specials.lookatme.ru/0000000001/banners/system/specials_react/projects/general/scripts/ads.js"></script>
-  <script type="text/javascript" src="https://lamcdn.net/specials.lookatme.ru/0000000001/banners/system/specials_react/projects/general/scripts/script_dev_1.js"></script>
-  <script type="text/javascript" src="https://lamcdn.net/specials.lookatme.ru/0000000001/banners/system/specials_react/experiments/general/scripts/script.js"></script>
+  <script type="text/javascript" src="projects/general/scripts/ads.js"></script>
+  <script type="text/javascript" src="projects/general/scripts/script_dev_3.js"></script>
+  <script type="text/javascript">
+    if((document.readyState == "interactive") || (document.readyState == "complete")){
+      expStateOnInit();
+    } else {
+      window.addEventListener("DOMContentLoaded", (e) =>{
+        expStateOnInit();
+      })
+    }
+
+
+    function expStateOnInit(){
+      if(window['spec__properties']){
+        if(spec__properties.experiments.on){
+          expStateOn();
+        } else{
+          window.addEventListener("specProperiesChanged", (e) => {
+            if(spec__properties.experiments.on){
+              expStateOn();
+            }
+          });
+        }
+      }
+      else{
+        window.addEventListener("specScriptInit", (e) =>{
+          if(spec__properties.experiments.on){
+            expStateOn();
+          } else{
+            window.addEventListener("specProperiesChanged", (e) => {
+              if(spec__properties.experiments.on){
+                expStateOn();
+              }
+            });
+          }
+        });
+      }
+    }
+
+
+    function expStateOn(){
+      specAddFile("script", spec__properties.head, "experiments/2020/checkReaded/js/script_dev_6.js");
+
+      specAddFile("script", spec__properties.head, "experiments/2020/popup/js/script.js");
+
+      specAddFile("script", spec__properties.head, "experiments/2020/linkReverser/js/script.js");
+      specAddFile("script", spec__properties.head, "experiments/2020/linkParametr/js/script.js");
+
+      specAddFile("script", spec__properties.head, "experiments/general/scripts/script_dev_2.js");
+    }
+  </script>
 </head>
 <body>
 <div class="article-text">
-  
+  <div class="text">fafafa<a href="#adfox[RANDOM]" data-altlink="#adfox[RANDOM]">f</a>aaaaaa</div>
+  <img src="http://dummyimage.com/800x600/4d494d/686a82.gif&text=placeholder+image" alt="placeholder+image">
 </div>
 </body>
 </html>
